--- a/assets/package.json
+++ b/assets/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@headlessui/react": "^1.0.0",
     "@tailwindcss/forms": "^0.3.3",
-    "node-sass": "^6.0",
     "phoenix_html": "^2.14.2",
     "react": "^17.0",
     "react-dom": "^17.0",
@@ -29,25 +28,22 @@
     "tailwindcss": "^2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "autoprefixer": "^10.2.6",
-    "babel-jest": "^26.0",
     "cpx": "^1.5.0",
     "esbuild": "^0.12.6",
+    "esbuild-jest": "^0.5.0",
     "esbuild-plugin-svgr": "^0.0.1",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^8.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.2",
-    "jest": "^26.4.2",
-    "jest-cli": "^26.0",
+    "jest": "^27.0",
+    "jest-cli": "^27.0",
     "postcss": "^8.3.0",
     "postcss-advanced-variables": "^3.0.1",
     "postcss-cli": "^8.3.1",
